<resources>
    <string name="app_name">ADOPTINO</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="alejandro">Alejandro Delosreyes</string>
    <string name="ruth">Ruth Nemoga</string>
    <string name="john">John Carreño</string>
    <string name="ricardo">Ricardo González</string>
    <string name="leidy">Leidy Díaz</string>
    <string name="sobreNosotros">Sobre nosotros</string>
    <string name="reporta">Reportes</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="open">open</string>
    <string name="close">close</string>

</resources>